--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.iconBtn {
+  transition: all 0.3s !important;
+}
+.iconBtn:hover {
+  background-color: #c4c2c2 !important;
+  box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+}
+.todoCard {
+  transition: all 0.3s !important;
+}
+.todoCard:hover {
+  padding: 20px 0;
+  box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: Alex;
+  src: url("../public/Fonts/Alexandria-Regular.ttf");
+  font-weight: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: Alex;
+  src: url("../public/Fonts/Alexandria-Bold.ttf");
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: Alex;
+  src: url("../public/Fonts/Alexandria-Black.ttf");
+  font-weight: 900;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+  font-family: Alex;
+  src: url("../public/Fonts/Alexandria-Light.ttf");
+  font-weight: 200;
 }
